--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,39 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
 
 body {
 	background-color: #000000;
 	color:white;
 	position: relative;
 }
+
+div.tabBox p {
+	font-size: 150%
+}
+a {
+	color: #75aaf4;
+	text-decoration: none;
+	font-weight:bold;
+}
+.intLink{
+	color:#24a815;
+	cursor: pointer;
+	font-weight:bold;
+}
+
+.bolded{
+	color: orange;
+	font-weight:bold;
+}
+
 #name {
 	font-size:500%;
 	color:#24a815;
 	font-family: "Questrial";
 	user-select: none;
 	position: relative;
-	text-align:center;
+	text-align: center;
 	cursor:default;
 	top:10px;
 }
@@ -45,7 +68,7 @@ div.tabPage{
 
 div.tabBar button {
 	user-select:none;
-	width: 10.42%;
+	width: 200px;
     height: 70px;
 	background-color: black;
 	font-size:200%;
