--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,12 @@ div.tabBar {
 
 div.tabPage{
 	font-family: "Quicksand";
-	transition: 0.3s;
-	-webkit-transition: 0.3s;
 	display:block;
+	-moz-transition: all 0.3s;
+ 	-khtml-transition: all 0.3s;
+ 	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
 }
 
 
@@ -114,6 +117,6 @@ div.tabBar button.active {
 
 }
 #cont img:hover {
-	opacity:1;
+	opacity:0.999;
 
 }
