--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
 	color:white;
 	position: relative;
 }
+h3 {
+
+	user-select: none;
+	cursor: default;
+}
 
 div.tabBox p {
 	font-size: 150%
